chore (main) Clean up JS code

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   </head>
   <body>
     <p id ="one"></p>
+      <input id="vari" type="text" name="boxInput" placeholder ="Wadda got?" value=""/>
+      <button type="button" name="button" onclick="insertVar">Let's Giver!</button>
+
+
 
       <script type="text/javascript" src="app.js"></script>
   </body>
