feat(main) Add eventListener to input box

--- a/index.html
+++ b/index.html
@@ -10,9 +10,28 @@
 
   </head>
   <body>
+
+    <!-- <div class="topmatter">
+
+      <div class="side-container">
+        <div class="container-title">Guess A Letter!</div>
+        <div class="input-area">
+          <input id="letter-input" type="text" maxlength="1"/>
+        </div>
+      </div>
+
+      <div class="side-container">
+        <div class="container-title">Guessed Letters</div>
+        <div id="wrong-letters" class="input-area"></div>
+     </div>
+    </div> -->
+
+
     <p id ="one"></p>
       <input id="vari" type="text" name="boxInput" placeholder ="Wadda got?" value=""/>
-      <button type="button" name="button" onclick="insertVar">Let's Giver!</button>
+      <button type="button" name="button" onclick="">Let's Giver!</button>
+
+  <div id="alphabet"></div>
 
 
 
