--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
 
 
-      <script type="text/javascript" src="app.js"></script>
+      <script type="text/javascript" src="./javascipt/app.js"></script>
+        <script type="text/javascript" src="./javascipt/start.js"></script>
   </body>
 </html>
