--- a/index.html
+++ b/index.html
@@ -10,26 +10,11 @@
 
   </head>
   <body>
-
-    <!-- <div class="topmatter">
-
-      <div class="side-container">
-        <div class="container-title">Guess A Letter!</div>
-        <div class="input-area">
-          <input id="letter-input" type="text" maxlength="1"/>
-        </div>
-      </div>
-
-      <div class="side-container">
-        <div class="container-title">Guessed Letters</div>
-        <div id="wrong-letters" class="input-area"></div>
-     </div>
-    </div> -->
-
+    <h3>Let's HANGman</h3>
 
     <p id ="one"></p>
       <input id="vari" type="text" name="boxInput" placeholder ="Wadda got?" value=""/>
-      <button type="button" name="button" onclick="">Let's Giver!</button>
+      <button id ="accept" type="button" name="button" onclick="">Let's Giver!</button>
 
   <div id="alphabet"></div>
 
