--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>Hangman</title>
     <!-- <link rel="stylesheet" href="/main.css"> -->
-    <link rel="bolierplate" href="/bolierplate.css">
+    <!-- <link rel="bolierplate" href="/bolierplate.css"> -->
 
 
 
@@ -21,6 +22,6 @@
 
 
       <script type="text/javascript" src="./javascipt/app.js"></script>
-        <script type="text/javascript" src="./javascipt/start.js"></script>
+        <!-- <script type="text/javascript" src="./javascipt/start.js"></script> -->
   </body>
 </html>
