feat (main) Add new style elements on CSS

--- a/index.html
+++ b/index.html
@@ -1,24 +1,28 @@
 
+
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>Hangman</title>
-    <!-- <link rel="stylesheet" href="/main.css"> -->
+    <link rel="stylesheet" href="main.css">
     <!-- <link rel="bolierplate" href="/bolierplate.css"> -->
 
 
 
   </head>
   <body>
-    <h3>Let's HANGman</h3>
+    <div class="gameplay">
+
+    
+    <h1>Let's HANGman</h1>
 
     <p id ="one"></p>
-      <input id="vari" type="text" name="boxInput" placeholder ="Wadda got?" value=""/>
+      <input id="vari" type="text" name="boxInput" placeholder ="Wadda got?" maxlength = "1" value=""/>
       <button id ="accept" type="button" name="button" onclick="">Let's Giver!</button>
 
-  <div id="alphabet"></div>
-
+      <div id="alphabet"></div>
+    </div>
 
 
       <script type="text/javascript" src="./javascipt/app.js"></script>
