Add JS to update results

--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
 
   </head>
   <body>
-    <div class="gameplay">
+    <div class="gameplay container">
 
-    
-    <h1>Let's HANGman</h1>
+      <div class="gpelements">
 
-    <p id ="one"></p>
-      <input id="vari" type="text" name="boxInput" placeholder ="Wadda got?" maxlength = "1" value=""/>
-      <button id ="accept" type="button" name="button" onclick="">Let's Giver!</button>
 
-      <div id="alphabet"></div>
+        <h1>Let's HANGman</h1>
+        <p id ="one"></p>
+          <input id="vari" type="text" name="boxInput" placeholder ="Wadda got?" maxlength = "1" value=""/>
+          <button id ="accept" type="button" name="button" onclick="">Let's Giver!</button>
+
+          <div id="alphabet"></div>
+
+        </div>
     </div>
 
 
