Add CS elements to Gameplay class

--- a/index.html
+++ b/index.html
@@ -17,14 +17,18 @@
       <div class="gpelements">
 
 
-        <h1>Let's HANGman</h1>
+        <h1>LETS HANGMAN!</h1>
         <p id ="one"></p>
           <input id="vari" type="text" name="boxInput" placeholder ="Wadda got?" maxlength = "1" value=""/>
-          <button id ="accept" type="button" name="button" onclick="">Let's Giver!</button>
+          <button id ="accept" type="button" name="button" onclick="">LETS GIVER!</button>
 
           <div id="alphabet"></div>
 
           <div class="attempt"></div>
+
+          <div class="">
+
+          </div>
 
         </div>
     </div>
