Add Death Animation

--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
 
           <div class="attempt"></div>
 
-          <div class="">
-
-          </div>
+          <div><img class='death'src='./death.gif' style='visibility:hidden'/></div>
 
         </div>
     </div>
