--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
   </head>
   <body>
+    <div class ="navbar"><header>
+    </header></div>
+
     <div class="gameplay container">
 
       <div class="gpelements">
@@ -26,12 +29,13 @@
 
           <div class="attempt"></div>
 
-          <div><img class='death'src='./death.gif' style='visibility:hidden'/></div>
+          <div><img class='death'src='./death.gif' style='visibility:hidden'/>
+          <img class='life'src='./download.gif' style='visibility:hidden'/></div>
 
         </div>
     </div>
 
-
+  </div>
       <script type="text/javascript" src="./javascipt/app.js"></script>
         <!-- <script type="text/javascript" src="./javascipt/start.js"></script> -->
   </body>
